--- a/index.html
+++ b/index.html
@@ -20,10 +20,48 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
-    <!-- Timeblocks go here -->
-  </div>
 
+
+  <main>
+    <div class="container">
+
+      <!-- Timeblocks go here -->
+
+      <div class="time-block row past">
+        <div class="hour col-sm-1">9AM</div>
+        <textarea class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="time-block row past">
+        <div class="hour col-sm-1">10AM</div>
+        <textarea class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+  </main>
+  <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 </body>
