--- a/index.html
+++ b/index.html
@@ -27,37 +27,86 @@
 
       <!-- Timeblocks go here -->
 
-      <div class="time-block row past">
+      <!-- 9 AM -->
+      <div class="time-block row">
         <div class="hour col-sm-1">9AM</div>
-        <textarea class="col-sm-10"></textarea>
+        <textarea id="textArea-9" class="col-sm-10"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
 
-      <div class="time-block row past">
+      <!-- 10AM -->
+      <div class="time-block row">
         <div class="hour col-sm-1">10AM</div>
-        <textarea class="col-sm-10"></textarea>
+        <textarea id="textarea-10" class="col-sm-10"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
 
+      <!-- 11AM -->
+      <div class="time-block row">
+        <div class="hour col-sm-1">11AM</div>
+        <textarea id="textarea-11" class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
 
+      <!-- 12PM -->
+      <div class="time-block row">
+        <div class="hour col-sm-1">12PM</div>
+        <textarea id="textarea-12" class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
 
+      <!-- 1PM -->
+      <div class="time-block row">
+        <div class="hour col-sm-1">1PM</div>
+        <textarea id="textarea-13" class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
 
+      <!-- 2PM -->
+      <div class="time-block row">
+        <div class="hour col-sm-1">2PM</div>
+        <textarea id="textarea-14" class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
 
+      <!-- 3PM -->
+      <div class="time-block row">
+        <div class="hour col-sm-1">3PM</div>
+        <textarea id="textarea-15" class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
 
+      <!-- 4PM -->
+      <div class="time-block row">
+        <div class="hour col-sm-1">4PM</div>
+        <textarea id="textarea-16" class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
 
-
-
-
-
-
-
-
-
-
+      <!-- 5PM -->
+      <div class="time-block row">
+        <div class="hour col-sm-1">5PM</div>
+        <textarea id="textarea-17" class="col-sm-10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
 
     </div>
   </main>
