--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- 9 AM -->
       <div class="time-block row">
         <div class="hour col-sm-1">9AM</div>
-        <textarea id="textArea-9" class="col-sm-10"></textarea>
+        <textarea id="textarea-9" class="col-sm-10" data-hour="9"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -39,7 +39,7 @@
       <!-- 10AM -->
       <div class="time-block row">
         <div class="hour col-sm-1">10AM</div>
-        <textarea id="textarea-10" class="col-sm-10"></textarea>
+        <textarea id="textarea-10" class="col-sm-10" data-hour="10"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -48,7 +48,7 @@
       <!-- 11AM -->
       <div class="time-block row">
         <div class="hour col-sm-1">11AM</div>
-        <textarea id="textarea-11" class="col-sm-10"></textarea>
+        <textarea id="textarea-11" class="col-sm-10" data-hour="11"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -57,7 +57,7 @@
       <!-- 12PM -->
       <div class="time-block row">
         <div class="hour col-sm-1">12PM</div>
-        <textarea id="textarea-12" class="col-sm-10"></textarea>
+        <textarea id="textarea-12" class="col-sm-10" data-hour="12"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -66,7 +66,7 @@
       <!-- 1PM -->
       <div class="time-block row">
         <div class="hour col-sm-1">1PM</div>
-        <textarea id="textarea-13" class="col-sm-10"></textarea>
+        <textarea id="textarea-13" class="col-sm-10" data-hour="13"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -75,7 +75,7 @@
       <!-- 2PM -->
       <div class="time-block row">
         <div class="hour col-sm-1">2PM</div>
-        <textarea id="textarea-14" class="col-sm-10"></textarea>
+        <textarea id="textarea-14" class="col-sm-10" data-hour="14"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -84,7 +84,7 @@
       <!-- 3PM -->
       <div class="time-block row">
         <div class="hour col-sm-1">3PM</div>
-        <textarea id="textarea-15" class="col-sm-10"></textarea>
+        <textarea id="textarea-15" class="col-sm-10" data-hour="15"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -93,7 +93,7 @@
       <!-- 4PM -->
       <div class="time-block row">
         <div class="hour col-sm-1">4PM</div>
-        <textarea id="textarea-16" class="col-sm-10"></textarea>
+        <textarea id="textarea-16" class="col-sm-10" data-hour="16"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
@@ -102,7 +102,7 @@
       <!-- 5PM -->
       <div class="time-block row">
         <div class="hour col-sm-1">5PM</div>
-        <textarea id="textarea-17" class="col-sm-10"></textarea>
+        <textarea id="textarea-17" class="col-sm-10" data-hour="17"></textarea>
         <button class="saveBtn btn col-sm-1">
           <i class="fas fa-save"></i>
         </button>
