Refactored save button code to be in one function

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">9AM</div>
         <textarea id="textarea-9" class="col-sm-10" data-hour="9"></textarea>
-        <button class="saveBtn btn btn-9 col-sm-1">
+        <button class="saveBtn btn btn-9 col-sm-1" data-hour="9">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -41,7 +41,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">10AM</div>
         <textarea id="textarea-10" class="col-sm-10" data-hour="10"></textarea>
-        <button class="saveBtn btn btn-10 col-sm-1">
+        <button class="saveBtn btn btn-10 col-sm-1" data-hour="10">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -50,7 +50,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">11AM</div>
         <textarea id="textarea-11" class="col-sm-10" data-hour="11"></textarea>
-        <button class="saveBtn btn btn-11 col-sm-1">
+        <button class="saveBtn btn btn-11 col-sm-1" data-hour="11">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -59,7 +59,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">12PM</div>
         <textarea id="textarea-12" class="col-sm-10" data-hour="12"></textarea>
-        <button class="saveBtn btn btn-12 col-sm-1">
+        <button class="saveBtn btn btn-12 col-sm-1" data-hour="12">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -68,7 +68,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">1PM</div>
         <textarea id="textarea-13" class="col-sm-10" data-hour="13"></textarea>
-        <button class="saveBtn btn btn-13 col-sm-1">
+        <button class="saveBtn btn btn-13 col-sm-1" data-hour="13">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -77,7 +77,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">2PM</div>
         <textarea id="textarea-14" class="col-sm-10" data-hour="14"></textarea>
-        <button class="saveBtn btn btn-14 col-sm-1">
+        <button class="saveBtn btn btn-14 col-sm-1" data-hour="14">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -86,7 +86,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">3PM</div>
         <textarea id="textarea-15" class="col-sm-10" data-hour="15"></textarea>
-        <button class="saveBtn btn btn-15 col-sm-1">
+        <button class="saveBtn btn btn-15 col-sm-1" data-hour="15">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -95,7 +95,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">4PM</div>
         <textarea id="textarea-16" class="col-sm-10" data-hour="16"></textarea>
-        <button class="saveBtn btn btn-16 col-sm-1">
+        <button class="saveBtn btn btn-16 col-sm-1" data-hour="16">
           <i class="fas fa-save"></i>
         </button>
       </div>
@@ -104,7 +104,7 @@
       <div class="time-block row">
         <div class="hour col-sm-1">5PM</div>
         <textarea id="textarea-17" class="col-sm-10" data-hour="17"></textarea>
-        <button class="saveBtn btn btn-17 col-sm-1">
+        <button class="saveBtn btn btn-17 col-sm-1" data-hour="17">
           <i class="fas fa-save"></i>
         </button>
       </div>
